fix loading spinner footer overlap (bug 1121215)

--- a/src/media/css/buttons-loadmore.styl
+++ b/src/media/css/buttons-loadmore.styl
@@ -6,6 +6,7 @@ $loadmore-desktop-width = 300px;
 .loadmore {
     list-style: none;
     margin: -1px auto 0 auto;
+    min-height: 48px;
     padding: 18px 10px;
     position: relative;
     width: 100%;
